# pyai

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  mcp_server.py  pyproject.toml
docs/: AGENTS.md  architecture.md  contributing.md  internals.md  mcp.md
examples/: README.md  ida_binary_analysis.py  langchain_mcp_agent.py  langgraph_supervisor_agent.py  mcp_filesystem_agent.py  radare2_binary_analysis.py  sdk_edge_cases_live.py  sdk_extensions_demo.py  sdk_extensions_live.py  structured_output_fuzzer_style.py  supervisor_llm_call_flow_demo.py
src/piai/: __init__.py  agent.py  cli.py  stream.py  types.py
src/piai/langchain/: __init__.py  chat_model.py  sub_agent_tool.py
src/piai/mcp/: __init__.py  client.py  hub.py  langchain_tools.py  server.py
src/piai/oauth/: __init__.py  openai_codex.py  pkce.py
src/piai/providers/: message_transform.py  openai_codex.py
src/piai/usage/: __init__.py  openai_codex.py  registry.py  render.py  report.py
src/pyai/: __init__.py  cli.py
src/pyai/oauth/: openai_codex.py  storage.py  types.py
src/pyai/providers/: message_transform.py  openai_codex.py
tests/: test_coverage_boost.py  test_executor_coverage.py  test_langchain.py  test_langgraph_integration.py  test_mcp.py  test_message_transform.py  test_oauth_codex.py  test_pkce.py  test_sdk_extensions.py  test_thinking.py
