[project]
name = "pi-ai-py"
version = "0.1.0"
description = "Python port of @mariozechner/pi-ai — unified LLM streaming API with OAuth authentication"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Xplo8E", email = "rvkyadav71@gmail.com" }
]
keywords = ["openai", "chatgpt", "gpt", "llm", "oauth", "streaming", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "websockets>=12.0",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/Xplo8E/piai"
Repository = "https://github.com/Xplo8E/piai"
"Bug Tracker" = "https://github.com/Xplo8E/piai/issues"

[project.scripts]
piai = "piai.cli:cli"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "piai"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "langchain-core>=1.2.20",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
